test/lit/vmi_new/vmi_vselr_lane_mismatch_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --emit-pto-ir %s 2>&1 | FileCheck %s

// vselr: index lane count must match result lane count.

module {
  func.func @vselr_index_lane_mismatch(
      %src: !pto.vmi.vreg<64xf16>,
      %idx: !pto.vmi.vreg<8xi16>)
      -> !pto.vmi.vreg<4xf16> {
    // CHECK: error: 'pto.vmi.vselr' op requires index lane count to match result lane count
    %r = pto.vmi.vselr %src, %idx
        : !pto.vmi.vreg<64xf16>, !pto.vmi.vreg<8xi16> -> !pto.vmi.vreg<4xf16>
    return %r : !pto.vmi.vreg<4xf16>
  }
}
